Fix CORS for Cloudflare tunnel + Vercel deployment